--- a/Website/Website.html
+++ b/Website/Website.html
@@ -4,6 +4,7 @@
 	<script type="text/javascript" src="jquery-1.11.2.js"></script>
 	<style media="screen" type="text/css">
             body{
+				background-color: #BDBDBD;
                 margin: 0px;
                 padding: 0px;
                 }             
@@ -49,7 +50,6 @@
                 }
             
             #header ul li{
-                margin-top:-12px;
                 padding-left:0;
                 padding-right:0;
                 float:left;
@@ -74,10 +74,18 @@
 				width: 100%;
 				margin-top: 20px;
 			}
+			
+			#space {
+				width: 100%;
+				height: 300px;
+			}
 </style>
 </head>
 <body>
-      
+<div id="space" class="scrollto">
+	<br><br><br><br><br><br><br>
+	<h1 align="center">ICT4Events</h1>
+</div>      
 <section id="header" class = "header">
 
 	<script>
